Add entity framework and schema

--- a/GraphQL.Playground/appsettings.json
+++ b/GraphQL.Playground/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost;Database=GraphQLPlayground;User Id=sa;Password=!sqlTest201;Encrypt=False"
+    }
 }
