--- a/GraphQL.Playground/docker-compose.yml
+++ b/GraphQL.Playground/docker-compose.yml
@@ -4,3 +4,15 @@
     build:
       context: .
       dockerfile: Dockerfile
+    ports:
+        - "8080:8080"
+        - "8081:8081"
+    depends_on:
+      - db
+  db:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    environment:
+      SA_PASSWORD: "!sqlTest201"
+      ACCEPT_EULA: "Y"
+    ports:
+        - "1433:1433"
